feat: expose map update endpoints
